# ubuntu-commander

./: .gitignore  README.md  __init__.py  pyproject.toml
mcp/desktop/: __main__.py  input.py  server.py  vision.py
src/servers/: README.md  __init__.py  __main__.py  input.py  server.py  vision.py
ubuntu_desktop/: __init__.py  __main__.py  server.py
